<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".resultActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_title"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/register_number"
                android:layout_weight="1"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/regno_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_result"
                android:layout_weight="1"
                android:textSize="18sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/name_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_result"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:textSize="18sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/degree"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/degree_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deg_result"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/ph_no"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/phno_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phno_result"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        />

</LinearLayout>